--- a/ui/config.css
+++ b/ui/config.css
@@ -59,6 +59,7 @@
     --img-bg-paper: url(https://media.discordapp.net/attachments/1013804950058442798/1013859215724527616/paper.png);
     --img-bg-title: url(https://media.discordapp.net/attachments/1013804950058442798/1013808518626824253/bg.png);
     --img-bg-hover: url(https://media.discordapp.net/attachments/1013804950058442798/1013807475222401135/background-red.png);
+    --img-table: url(https://media.discordapp.net/attachments/1013804950058442798/1034905568734879764/table-background.jpg?width=897&height=561);
 
     /* Font - Texto */
     --c-text: rgba(255, 255, 255, 1);
